# darkflux-hote-

./: .gitignore  COMMIT_EDITMSG  README.md  custom.db  index  schema.prisma  worklog.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  websocket_manager.py
backend/app/models/: bill.py  menu.py  order.py  user.py
backend/app/routers/: analytics.py  auth.py  bills.py  menu.py  orders.py  users.py  websocket.py
backend/app/schemas/: analytics.py  bill.py  menu.py  order.py  user.py
backend/app/services/: seed.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/kitchen/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/menu/: page.tsx
frontend/src/app/qr/: page.tsx
frontend/src/app/track/: page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/ui/: ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts
logs/: HEAD
logs/refs/heads/: main
refs/heads/: main
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/: route.ts
src/app/api/bookings/: route.ts
src/app/api/dashboard/: route.ts
src/components/hotel/: AIChat.tsx  BookingsPage.tsx  CartPage.tsx  FoodPage.tsx  Footer.tsx  Header.tsx  HomePage.tsx  LoginModal.tsx  ProfilePage.tsx  RoomsPage.tsx
src/lib/: auth.ts
src/lib/stores/: authStore.ts  cartStore.ts  navStore.ts
(+21 files in other folders)
